@@ -63,28 +63,6 @@ add_subdirectory(sampleagent)
 install(FILES  AUTHORS ChangeLog COPYING README 
        DESTINATION ${DATADIR}/doc/${CMAKE_PROJECT_NAME})
 
-if (WIN32)
-       string(REGEX REPLACE "(.*)\\.lib" "\\1.dll" ODEDLL "${ODE_LIBRARY}")
-       if (EXISTS ${ODEDLL})
-              install(PROGRAMS ${ODEDLL} DESTINATION ${BINDIR})
-       endif (EXISTS ${ODEDLL})
-
-       install(DIRECTORY "${Boost_LIBRARY_DIRS}/" DESTINATION ${BINDIR}
-             FILES_MATCHING PATTERN "*.dll")
-
-       string(REGEX REPLACE "(.*)\\.lib" "\\1.dll" DevIL_DLL "${DevIL_LIBRARY_IL}")
-       if (EXISTS ${DevIL_DLL})
-              install(PROGRAMS ${DevIL_DLL} DESTINATION ${BINDIR})
-       endif (EXISTS ${DevIL_DLL})
-
-       install(DIRECTORY "${FREETYPE_INCLUDE_DIR_ft2build}/../bin/" DESTINATION ${BINDIR}
-             FILES_MATCHING PATTERN "*.dll")
-
-       set(SDL_DLL "${SDL_INCLUDE_DIR}/../lib/sdl.dll")
-       if (EXISTS ${SDL_DLL})
-              install(PROGRAMS ${SDL_DLL} DESTINATION ${BINDIR})
-       endif (EXISTS ${SDL_DLL})
-endif (WIN32)
 ########### uninstall support ############
 CONFIGURE_FILE(
   "${CMAKE_CURRENT_SOURCE_DIR}/cmake_uninstall.cmake.in"
