@@ -1,3 +1,14 @@
+2010-02-28  Marian Buchta  <marian.buchta@gmail.com>
+
+	* gendot/main.cpp:
+	* monitorspark/main.cpp:
+	* sampleagent/leggedspherebehavior.cpp:
+	* samplesim/main.cpp:
+	- change shared_ptr -> boost::shared_ptr because of Visual Studio 2010 compatibility. Issue between boost::shared_ptr and std::tr1::shared_ptr.
+	
+	* CMakeLists.txt:
+	- Removed installation of third party libraries under Windows (now done by simspark)
+
 2009-08-25  Marian Buchta  <marian.buchta@gmail.com>
 
 	* windows/install_extra.nsi:
